[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "rezume"
version = "0.4.1"
description = "Rezume, validate and create text-based resumes easily."
authors = ["Abdul-Hakeem Shaibu <s.abdulhakeeem@gmail.com>"]
license = "BSD-2-Clause"
readme = "README.rst"
repository = "https://github.com/hkmshb/rezume.git"
keywords = [ "resume", "rezume" ]


[tool.poetry.dependencies]
python = "^3.6"
pydantic = {version = "^1.5.1", extras = ["email"]}
pyyaml = "^5.3.1"
typer = {version = "^0.3.0", extras = ["all"]}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pretend = "^1.0.9"

[tool.poetry.scripts]
rezume = "rezume.cli:main"

[tool.coverage.run]
omit = [
    "*/itty3.py",
    "*/cli/__init__.py",
    "*/cli/commands/__init__.py"
]
