[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rezume"
version = "0.4.2"
description = "Rezume, validate and create text-based resumes easily."
authors = ["Abdul-Hakeem Shaibu <s.abdulhakeeem@gmail.com>"]
license = "BSD-2-Clause"
readme = "README.rst"
repository = "https://github.com/hkmshb/rezume.git"
keywords = [ "resume", "rezume" ]


[tool.poetry.dependencies]
python = "^3.6"
pydantic = {version = "^1.7.3", extras = ["email"]}
pyyaml = "^5.4.1"
typer = {version = "^0.3.2", extras = ["all"]}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pretend = "^1.0.9"

[tool.poetry.scripts]
rezume = "rezume.cli:main"

[tool.black]
line-length = 96
quite = true
version = true

[tool.coverage.run]
omit = [
    "*/itty3.py",
    "*/cli/__init__.py",
    "*/cli/commands/__init__.py"
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpath = "tests"
